<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home" android:icon="@drawable/ic_home" android:title="@string/home_title" />
    <item android:id="@+id/nav_my_challenges" android:icon="@drawable/ic_challenges" android:title="@string/my_challenges_title" />
    <item android:id="@+id/nav_create" android:icon="@drawable/ic_create" android:title="@string/create_title" />
    <item android:id="@+id/nav_profile" android:icon="@drawable/ic_profile" android:title="@string/profile_title" />
</menu>
